2010-08-31  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        deduplicate code from Node::checkReplaceChild and Node::checkAddChild
        https://bugs.webkit.org/show_bug.cgi?id=44962

        Remove duplicate code in preparation for fixing https://bugs.webkit.org/show_bug.cgi?id=19524
        No new tests since there is no change in functionality.

        * dom/Node.cpp:
        (WebCore::isChildTypeAllowed):
        (WebCore::Node::canReplaceChild):
        (WebCore::checkAcceptChild):
        (WebCore::transferOwnerDocument):
        (WebCore::Node::checkReplaceChild):
        (WebCore::Node::checkAddChild):

2010-08-30  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        [Chromium] bindTexture(TEXTURE_CUBE_MAP) shouldn't generate errors with valid cubemap texture
        https://bugs.webkit.org/show_bug.cgi?id=44922

        * html/canvas/WebGLRenderingContext.cpp: Remove TEXTURE_WRAP_R code.
        (WebCore::WebGLRenderingContext::bindTexture):
        * html/canvas/WebGLTexture.cpp: Remove the code for tracking TEXTURE_WRAP_R.
        (WebCore::WebGLTexture::WebGLTexture):
        * html/canvas/WebGLTexture.h: Ditto.

2010-08-31  Jian Li  <jianli@chromium.org>

        Rubber-stamped by David Levin.

        Rename addTwoCStrings to concatenateTwoCStrings.

        * fileapi/BlobBuilder.cpp:
        (WebCore::concatenateTwoCStrings):
        (WebCore::BlobBuilder::append):

2010-08-31  Jian Li  <jianli@chromium.org>

        Reviewed by Darin Fisher.

        Improve BlobBuilder to combine adjacent strings.
        https://bugs.webkit.org/show_bug.cgi?id=44884

        * fileapi/BlobBuilder.cpp:
        (WebCore::addTwoCStrings):
        (WebCore::BlobBuilder::append):

2010-08-31  Darin Adler  <darin@apple.com>

        Reviewed by Simon Fraser.

        Make DOM classes start with a reference count of 1, like all other RefCounted
        https://bugs.webkit.org/show_bug.cgi?id=28068
